@@ -1,3 +1,8 @@
+2007-11-02  Robert Ancell  <robert.ancell@gmail.com>
+
+	* Show threatened squares and pieces able to be taken (Bug #471409)
+        * lib/chess/pgn.py: Handle carriage returns in PGN files
+
 2007-10-23  Robert Ancell  <robert.ancell@gmail.com>
 
 	* glchess.in: Display error dialog and quit if unable to import glchess.glchess (Bug #412690)
